# ot-harjoitustyo

./: README.md  tyoaikakirjanpito.md
dokumentaatio/: maarittelydokumentti_tetris.md  tuntikirjanpito.md  tyoaikakirjanpito.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
projekti/: pyproject.toml  tetris.py
src/: clock.py  game_loop.py  index.py  level.py  pyproject.toml  renderer.py  tasks.py  tetrimino.py  tetris.py
src/neededthings/: clock.py  randomgenerator.py
src/tests/: tetris_test.py
