[tool.poetry]
name = "Tetris"
version = "0.1.0"
description = ""
authors = ["emeraldgcube <78031592+emeraldgcube@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
pygame = "^2.1.0"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
